--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
   "rules": {
     "babel/generator-star-spacing": 1,
     "no-console": 0,
-    "max-len": 0
+    "max-len": 0,
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }]
   }
 }
