--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "moment-duration-format": "^1.3.0",
     "node-uuid": "^1.4.7",
     "panza": "^2.3.0",
-    "react": "15.1.0",
-    "react-native": "0.28.0",
+    "react": "^15.2.0",
+    "react-native": "^0.28.0",
     "react-native-action-button": "^1.1.7",
     "react-native-button": "^1.6.0",
     "react-native-vector-icons": "^2.0.3",
@@ -23,7 +23,8 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-loop": "^2.1.1",
-    "redux-persist": "^3.2.2"
+    "redux-persist": "^3.2.2",
+    "reselect": "^2.5.2"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
